--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Rogelio Gracia Otalvaro"
 title_separator          : "-"
 name                     : &name "Rogelio Gracia Otalvaro"
 description              : &description "Ph.D. Candidate in Computer Science and Electrical Engineering"
-url                      : https://rogsgrot.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://rogergo.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "RogsGROT/rogsgrot.github.io"
+repository               : "rogergo/rogergo.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -47,7 +47,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "rogeliogo"
+  github           : "rogergo"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
