--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Awards & Recognition"
+    url: /awards/    
 
   - title: "Teaching"
     url: /teaching/    
