--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bettinas-portfolio",
+  "name": "rogelio-gracia-portfolio",
   "type": "module",
   "version": "1.0.0",
   "scripts": {
