--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@types/d3-scale-chromatic": "^3.0.3",
